# item

./: .gitattributes  .gitignore  CHITONGLINGXUN_MIGRATION_RUNBOOK.md  CODE_ANALYSIS_REPORT.md  CODE_ARCHITECTURE_SEARCH_INDEX.md  CODE_MAP.md  CODE_RELATIONSHIP_GRAPH.md  CORE_CODE_MIGRATION_2026-06-17.md  CURSOR_IMPLEMENTATION_GUIDE.md  DocMate.vbs  HANDOFF_2026-06-15.md  HK_SITE_SAFETY_MONITORING_HANDOFF.md  PROJECT_SPEC.md  README.md  README_TOOLKIT.md  WORKSPACE_ROOT.txt  auto-login-v15-cctv.js  build-publish12.ps1  build-publish2.ps1  build-publish3.0.ps1  build-publish7.ps1  cctv_vlm_pipeline_v2.py  package-lock.json  package.json  publish20-memory.md  pyproject.toml  stable-hls-player-server.js  start.bat  test-csmart-iframe-player.js  vite.config.ts  启动DocMate.bat  启动文稿修改助手.bat  安装依赖.bat
Doc Mate Final/: Start-DocMate.ps1  package-lock.json  package.json  使用说明.txt  对比报告_publish100_vs_DocMate产品文档.md
WacliDesktop/: HiAgentBridgeWindow.xaml  ModuleShellWindow.xaml.cs  SetupProgressWindow.xaml
WacliDesktopLauncher/: Program.cs  WacliDesktopLauncher.csproj
agent-toolbox/: .env.example  README.md  TOOLS.md  requirements.txt
cctv-gateway/: .env.example  README.md  package-lock.json  package.json
chitong-lingxun/: build-publish3.0.ps1  publish22-memory.md
chitung-center/: .env.example  README.md  requirements-rag-full.txt  requirements.txt
chitung-frontend/: .env.example  README.md  index.html  package-lock.json  package.json
cloud-sync-api/: docker-compose.yml
docmate-shanshan/: AGENTS.md  README.md  (+5 more)
open-source-references/datefinder/: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.rst  RELEASE.md  pyproject.toml  tox.ini
open-source-references/datefinder/bench/: README.md  bench_core.py  bench_gate.py  bench_readme_compare.py  benchmark_results.json  benchmark_results.md  corpus_core.txt
open-source-references/datefinder/conformance/: ambiguity_multilingual_cases.jsonl  interpretation_judgments.jsonl  legacy_parity_cases.jsonl
open-source-references/datefinder/conformance/reports/: ambiguity_showcase.md  behavior_change_changelog.md  legacy_v2_diff_report.md  legacy_v2_diff_summary.json
open-source-references/datefinder/datefinder/: __init__.py  cli.py  constants.py  v2.py
open-source-references/datefinder/docs/: conf.py
open-source-references/datefinder/docs/releases/: 1.0.0.md  1.0.0rc1.md  1.0.0rc2.md  1.0.0rc3.md
open-source-references/datefinder/rust/datefinder-kernel/: Cargo.toml
open-source-references/datefinder/rust/datefinder-kernel/src/: lib.rs
open-source-references/datefinder/scripts/: build_conformance_corpus.py  diff_legacy_v2.py
open-source-references/datefinder/tests/: test_cli.py  test_find_dates.py  test_find_dates_strict.py  test_simple.py  test_v2_extract.py
(+1544 files in other folders)
