[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hk-site-safety-crawler"
version = "0.1.0"
description = "Hong Kong site safety monitoring crawler with YAML topic skills and alert card output."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4",
  "feedparser",
  "httpx",
  "lxml",
  "pypdf",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
hk-site-safety-crawler = "hk_site_safety_crawler.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
